dns/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dns-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
