dns/k8s/dns-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: coredns-kids-lb
  namespace: dns-system
  annotations:
    metallb.universe.tf/address-pool: default-pool
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
  - IPv4
  - IPv6
  selector:
    app: coredns-kids
  ports:
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: 53
---
apiVersion: v1
kind: Service
metadata:
  name: coredns-standard-lb
  namespace: dns-system
  annotations:
    metallb.universe.tf/address-pool: default-pool
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
  - IPv4
  - IPv6
  selector:
    app: coredns-standard
  ports:
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: 53
---
apiVersion: v1
kind: Service
metadata:
  name: coredns-standard-lb2
  namespace: dns-system
  annotations:
    metallb.universe.tf/address-pool: default-pool
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
  - IPv4
  - IPv6
  selector:
    app: coredns-standard
  ports:
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: 53
---
apiVersion: v1
kind: Service
metadata:
  name: coredns-kids-lb2
  namespace: dns-system
  annotations:
    metallb.universe.tf/address-pool: default-pool
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
  - IPv4
  - IPv6
  selector:
    app: coredns-kids
  ports:
  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: 53
