dns/k8s/doh-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doh-ingress
  namespace: dns-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
  - host: kids.xs4some.nl
    http:
      paths:
      - path: /dns-query
        pathType: Prefix
        backend:
          service:
            name: doh-server-kids
            port:
              number: 443
  - host: dns.xs4some.nl
    http:
      paths:
      - path: /dns-query
        pathType: Prefix
        backend:
          service:
            name: doh-server-standard
            port:
              number: 443
  tls:
  - hosts:
    - kids.xs4some.nl
    - dns.xs4some.nl
